Finished instructions. Added basic error checking, but no error message is provided.

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -139,12 +139,15 @@
                 <div id="Dialogs_FactCreation" title="Fact Editor">
                     <div>
                         <h2>Instructions</h2>
-                        <!--<p>Use your keyboard to enter <span class="red">simple statements</span>. Then connect those statements by dragging <span class="green">Operators</span> to the <span class="green">green</span> spots inbetween. You can <span class="gray">group</span> any two statements by using the <span class="gray">group tool</span> on the joining <span class="green">operator</span>. Use the <span class="gray">negation tool</span> to negate any <span class="red">simple</span> or complex statement.</p>
-                        -->
 			<ul>
 			    <li>Use your keyboard to enter <span class="red">simple statements</span></li>
 			    <li>Press the Space bar add an additional <span class="green">operator</span> and <span class="red">simple statement</span> spot.</li>
-			    <li></li>
+			    <li>Click a <span class="red">simple statement</span> or <span class="green">operator</span> to select it</li>
+                            <li>Drag and drop <span class="green">operators</span></li>
+                            <li>Form groups dragging the <span class="gray">(&nbsp;) tool</span> over an <span class="green">operator</span>!</li>
+                            <li>Select a <span class="red">simple statement</span> and press the <span class="gray">&tilde; button</span> to negate it.</li>
+                            <li>To negate a group, select the group's <span class="green">operator</span> and then press the <span class="gray">&tilde; button</span>.</li>
+                            <li>If you make a mistake, press the <span class="gray">Clear button</span>!</li>
 			</ul>
 			<h2>Creation Panel</h2>
                         <div id="Dialogs_FactCreation_Creation">
