Added ability to load existing Fact

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -64,47 +64,47 @@
 
                     </div>
                     <div id="Controls_AddTable" style="display: none;">
-                        <table>
+                        <table id="Controls_AddTable_Table">
                             <tr><th id="Controls_AddTable_Banner" colspan="3">Recent Facts</th></tr>
-                            <tr>
+                            <tr id="Controls_AddTable_Fact1">
                                 <td>AT1</td>
-                                <td id="Controls_AddTable_Fact1">
+                                <td>
                                     <div class="add-fact">+</div>
                                 </td>
                                 <td>
                                     <div class="edit-fact">..</div>
                                 </td>
                             </tr>
-                            <tr>
+                            <tr id="Controls_AddTable_Fact2">
                                 <td>AT2</td>
-                                <td id="Controls_AddTable_Fact2">
+                                <td>
                                     <div class="add-fact">+</div>
                                 </td>
                                 <td>
                                     <div class="edit-fact">..</div>
                                 </td>
                             </tr>
-                            <tr>
+                            <tr id="Controls_AddTable_Fact3">
                                 <td>AT3</td>
-                                <td id="Controls_AddTable_Fact3">
+                                <td>
                                     <div class="add-fact">+</div>
                                 </td>
                                 <td>
                                     <div class="edit-fact">..</div>
                                 </td>
                             </tr>
-                            <tr>
+                            <tr id="Controls_AddTable_Fact4">
                                 <td>AT4</td>
-                                <td id="Controls_AddTable_Fact4">
+                                <td>
                                     <div class="add-fact">+</div>
                                 </td>
                                 <td>
                                     <div class="edit-fact">..</div>
                                 </td>
                             </tr>
-                            <tr>
+                            <tr id="Controls_AddTable_Fact5">
                                 <td>AT5</td>
-                                <td id="Controls_AddTable_Fact5">
+                                <td>
                                     <div class="add-fact">+</div>
                                 </td>
                                 <td>
