AddTable can now update the html

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -64,7 +64,7 @@
 
                     </div>
                     <div id="Controls_AddTable" style="display: none;">
-                        <table id="Controls_AddTable_Table">
+                        <table>
                             <tr><th id="Controls_AddTable_Banner" colspan="3">Recent Facts</th></tr>
                             <tr id="Controls_AddTable_Fact1">
                                 <td>AT1</td>
