--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -144,7 +144,7 @@
 			    <li>Press the Space bar add an additional <span class="green">operator</span> and <span class="red">simple statement</span> spot.</li>
 			    <li>Click a <span class="red">simple statement</span> or <span class="green">operator</span> to select it</li>
                             <li>Drag and drop <span class="green">operators</span></li>
-                            <li>Form groups dragging the <span class="gray">(&nbsp;) tool</span> over an <span class="green">operator</span>!</li>
+                            <li>Form groups by dragging the <span class="gray">(&nbsp;) tool</span> over an <span class="green">operator</span>.</li>
                             <li>Select a <span class="red">simple statement</span> and press the <span class="gray">&tilde; button</span> to negate it.</li>
                             <li>To negate a group, select the group's <span class="green">operator</span> and then press the <span class="gray">&tilde; button</span>.</li>
                             <li>If you make a mistake, press the <span class="gray">Clear button</span>!</li>
