Added error message

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -152,7 +152,14 @@
 			<h2>Creation Panel</h2>
                         <div id="Dialogs_FactCreation_Creation">
                         </div>
-                        
+                        <div id="Dialogs_FactCreation_Error">
+                            <span class="ui-state-error error-message" id="Dialogs_FactCreation_Error_NotEnoughGroups" style="display: none;">
+                                
+                            </span>
+                            <span class="ui-state-error error-message" id="Dialogs_FactCreation_Error_ElementNotEntered" style="display: none;">
+                                Whoops! Looks like you forgot to fill in an operator or simple statement! Those are identified by the "?"!
+                            </span>
+                        </div>
                     </div>
                     <div>
                         <h4>Operators and tools</h4>
