Fixed bug where elements werent selectable when editing an existing fact. added better and more consistent error checking.

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -153,12 +153,12 @@
                         <div id="Dialogs_FactCreation_Creation">
                         </div>
                         <div id="Dialogs_FactCreation_Error">
-                            <span class="ui-state-error error-message" id="Dialogs_FactCreation_Error_NotEnoughGroups" style="display: none;">
-                                
-                            </span>
-                            <span class="ui-state-error error-message" id="Dialogs_FactCreation_Error_ElementNotEntered" style="display: none;">
+                            <div class="ui-state-error error-message" id="Dialogs_FactCreation_Error_NotEnoughGroups" style="display: none;">
+                                Hmm, this statement is a little ambiguous. Avoid situations where you have something like: p &and; q &and; r. Instead try p &and; (q &and; r), or (p &and; q) &and; r
+                            </div>
+                            <div class="ui-state-error error-message" id="Dialogs_FactCreation_Error_ElementNotEntered" style="display: none;">
                                 Whoops! Looks like you forgot to fill in an operator or simple statement! Those are identified by the "?"!
-                            </span>
+                            </div>
                         </div>
                     </div>
                     <div>
