Added pagination, comments, and a shit ton of todos

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -44,6 +44,11 @@
                 <div id="PickLevel_LevelContainer">
                     <ul id="PickLevel_LevelContainer_List"></ul>
                 </div>
+                <div id="PickLevel_MoreInfo"></div>
+                <div id="PickLevel_PageControls">
+                    <button type="button" id="PickLevel_PageControls_Next">Next Page</button>
+                    <button type="button" id="PickLevel_PageControls_Prev">Prev Page</button>
+                </div>
             </div>
             <div id="GameScreen" style="display: none;">
                 <canvas width="1024" height="768" id="MainGameCanvas">
