Enhancements to pagination, added click events for individual levels

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -40,14 +40,16 @@
                 </ul>
             </div>
             <div id="PickLevel" style="display: none">
-                <p>You can play any level, regardless of your completion of previous levels. Simply select a level to view your stats and then play it.</p>
                 <div id="PickLevel_LevelContainer">
                     <ul id="PickLevel_LevelContainer_List"></ul>
                 </div>
-                <div id="PickLevel_MoreInfo"></div>
+                <div id="PickLevel_MoreInfoContainer">
+                    <div id="PickLevel_MoreInfo" style="display: none;"></div>
+                </div>
                 <div id="PickLevel_PageControls">
                     <button type="button" id="PickLevel_PageControls_Next">Next Page</button>
                     <button type="button" id="PickLevel_PageControls_Prev">Prev Page</button>
+                    <button type="button" id="PickLevel_PageControls_Back">Back to Main Menu</button>
                 </div>
             </div>
             <div id="GameScreen" style="display: none;">
