Additional details for a level are now shown.. sort of. The values are hardcoded but the display logic is there.

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -44,7 +44,24 @@
                     <ul id="PickLevel_LevelContainer_List"></ul>
                 </div>
                 <div id="PickLevel_MoreInfoContainer">
-                    <div id="PickLevel_MoreInfo" style="display: none;"></div>
+                    <div id="PickLevel_MoreInfo" style="display: none;">
+                        <span class="level-info-piece">
+                            <span class="level-info-heading">Your best:</span>
+                            <span class="level-info-value" id="PickLevel_MoreInfo_Best"></span>
+                        </span>
+                        <span class="level-info-piece">
+                            <span class="level-info-heading">Par:</span>
+                            <span class="level-info-value" id="PickLevel_MoreInfo_Par"></span>
+                        </span>
+                        <span class="level-info-piece">
+                            <span class="level-info-heading">Completed?</span>
+                            <span class="level-info-value" id="PickLevel_MoreInfo_Completed"></span>
+                        </span>
+                        <span class="level-info-piece">
+                            <span class="level-info-heading">Par?</span>
+                            <span class="level-info-value" id="PickLevel_MoreInfo_OnPar"></span>
+                        </span>
+                    </div>
                 </div>
                 <div id="PickLevel_PageControls">
                     <button type="button" id="PickLevel_PageControls_Next">Next Page</button>
