Basic save/load functionality, disable continue button if a save game is not present.

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -34,6 +34,7 @@
                     </canvas>
                 </div>
                 <ul id="MainMenuOptions" class="center">
+		    <li><input type="button" value="New Game" id="MenuNewGame" class="menu-item" /></li>
                     <li><input type="button" value="Continue" id="MenuPlayGame" class="menu-item" /></li>
                     <li><input type="button" value="Pick Level" id="MenuPickLevel" class="menu-item" /></li>
                     <li><input type="button" value="Exit" id="MenuExitGame" class="menu-item" /></li>
