Added level selection ability - button to play the currently selected level

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -65,9 +65,10 @@
                     </div>
                 </div>
                 <div id="PickLevel_PageControls">
-                    <button type="button" id="PickLevel_PageControls_Next">Next Page</button>
                     <button type="button" id="PickLevel_PageControls_Prev">Prev Page</button>
+		    <button type="button" id="PickLevel_PageControls_Next">Next Page</button>
                     <button type="button" id="PickLevel_PageControls_Back">Back to Main Menu</button>
+		    <button type="button" id="PickLevel_PageControls_Play">Play Level</button>
                 </div>
             </div>
             <div id="GameScreen" style="display: none;">
