Saving functionality for level status. currently there is a bug in creating a new game where you have to wait a few seconds, close the game, and then reopen.

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -87,6 +87,8 @@
                         <button type="button" id="Controls_Executor_Evaluate">Evaluate</button>
                         <button type="button" id="Controls_Executor_ClearResults">Clear Results</button>
                         <button type="button" id="Controls_Executor_ClearInput">Clear Input</button>
+                        <button type="button" id="Controls_Executor_Save">Save</button>
+                        <button type="button" id="Controls_Executor_Reset">Reset</button>
                     </div>
                     <div id="Controls_Rules">
                         <ul id="Controls_Rules_List"></ul>
