Added blockUI and a save message when the save button is clicked

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" type="text/css" href="css/blitzer/jquery-ui-1.10.4.custom.min.css" />
         <script src="js/libs/jquery-1.9.0/jquery.min.js"></script>
         <script src="js/libs/jqueryui-1.10.0/jquery-ui.min.js"></script>
+        <script src="js/libs/jquery-blockui/jquery.blockUI.js"></script>
         <script src="js/util.js"></script>
         <script src="js/classes/Engine.js"></script>
         <script src="js/classes/Operator.js"></script>
