Modified the logic for creating and saving games so it is a little less stupid.

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -35,9 +35,9 @@
                     </canvas>
                 </div>
                 <ul id="MainMenuOptions" class="center">
-		    <li><input type="button" value="New Game" id="MenuNewGame" class="menu-item" /></li>
-                    <li><input type="button" value="Continue" id="MenuPlayGame" class="menu-item" /></li>
+                    <li><input type="button" value="Play Game" id="MenuPlayGame" class="menu-item" /></li>
                     <li><input type="button" value="Pick Level" id="MenuPickLevel" class="menu-item" /></li>
+		    <li><input type="button" value="Reset Progress" id="MenuReset" class="menu-item" /></li>
                     <li><input type="button" value="Exit" id="MenuExitGame" class="menu-item" /></li>
                 </ul>
             </div>
