More sensible handling of the AddTable. Works more like a queue rather than as a save slot as it was before.

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -102,7 +102,10 @@
                     </div>
                     <div id="Controls_AddTable" style="display: none;">
                         <table>
-                            <tr><th id="Controls_AddTable_Banner" colspan="3">Recent Facts</th></tr>
+                            <tr>
+                                <th id="Controls_AddTable_Banner" colspan="2">Recent Facts</th>
+                                <th><div class="add-fact" data="AT1">+</div></th>
+                            </tr>
                             <tr id="Controls_AddTable_Fact1">
                                 <td>AT1</td>
                                 <td>
