--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -105,48 +105,23 @@
                             </tr>
                             <tr id="Controls_AddTable_Fact1">
                                 <td>AT1</td>
-                                <td>
-                                    <div class="add-fact">+</div>
-                                </td>
-                                <td>
-                                    <div class="edit-fact">..</div>
-                                </td>
+				<td colspan="2"></td>
                             </tr>
                             <tr id="Controls_AddTable_Fact2">
                                 <td>AT2</td>
-                                <td>
-                                    <div class="add-fact">+</div>
-                                </td>
-                                <td>
-                                    <div class="edit-fact">..</div>
-                                </td>
+                                <td colspan="2"></td>
                             </tr>
                             <tr id="Controls_AddTable_Fact3">
                                 <td>AT3</td>
-                                <td>
-                                    <div class="add-fact">+</div>
-                                </td>
-                                <td>
-                                    <div class="edit-fact">..</div>
-                                </td>
+                                <td colspan="2"></td>
                             </tr>
                             <tr id="Controls_AddTable_Fact4">
                                 <td>AT4</td>
-                                <td>
-                                    <div class="add-fact">+</div>
-                                </td>
-                                <td>
-                                    <div class="edit-fact">..</div>
-                                </td>
+                                <td colspan="2"></td>
                             </tr>
                             <tr id="Controls_AddTable_Fact5">
                                 <td>AT5</td>
-                                <td>
-                                    <div class="add-fact">+</div>
-                                </td>
-                                <td>
-                                    <div class="edit-fact">..</div>
-                                </td>
+                                <td colspan="2"></td>
                             </tr>
                         </table>
                     </div>
