Added canvas logic. drawing arrows still needs some work

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -22,6 +22,7 @@
         <script src="js/dialogs/TutorialDialog.js"></script>
         <script src="js/dialogs/FactCreationDialog.js"></script>
         <script src="js/init.js"></script>
+	<script src="js/canvas.js"></script>
         <script src="js/control.js"></script>
         <script src="js/events.js"></script>
     </head>
@@ -70,7 +71,7 @@
                 </div>
             </div>
             <div id="GameScreen" style="display: none;" class="fill">
-                <canvas width="1024" height="768" id="MainGameCanvas">
+                <canvas width="1026" height="768" id="MainGameCanvas">
                     Something went wrong when rendering the canvas.
                 </canvas>
                 <div id="GameControls" class="fill">
