Added stub for pause menu and made a few more fullscrreen-related enhancements

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -189,6 +189,12 @@
                     </div>
                 </div>
             </div>
+            <div id="PauseMenu">
+                <h1>The game is PAUSED</h1>
+                <h3>Press ENTER to unpause.</h3>
+                <ul id="PauseMenu_Options">
+                </ul>
+            </div>
         </div>
     </body>
 </html>
