Moved all js dependencies into a single HTML file. This is used for the main application and also for the tests.

--- a/ProoferLogicEngine/public_html/tests.html
+++ b/ProoferLogicEngine/public_html/tests.html
@@ -12,8 +12,7 @@
         <script src="js/libs/qunit-1.10.0/qunit-1.10.0.js"></script>
         
         <!-- Import JS files to test here -->
-        <script src="js/classes/Operator.js"></script>
-        <script src="js/classes/Fact.js"></script>
+        <link rel="import" href="dependencies.html">
         
         <!-- Add test files here -->
         <script src="js/tests/Fact_tests.js"></script>
