--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -8,24 +8,7 @@
         <link rel="stylesheet" type="text/css" href="css/fact_creation.css" />
         <link rel="stylesheet" type="text/css" href="css/level_selection.css" />
         <link rel="stylesheet" type="text/css" href="css/blitzer/jquery-ui-1.10.4.custom.min.css" />
-        <script src="js/libs/jquery-1.9.0/jquery.min.js"></script>
-        <script src="js/libs/jqueryui-1.10.0/jquery-ui.min.js"></script>
-        <script src="js/libs/jquery-blockui/jquery.blockUI.js"></script>
-        <script src="js/util.js"></script>
-        <script src="js/classes/Operator.js"></script>
-        <script src="js/classes/Fact.js"></script>
-        <script src="js/classes/Rule.js"></script>
-        <script src="js/classes/Tutorial.js"></script>
-        <script src="js/classes/Level.js"></script>
-        <script src="js/classes/AddTable.js"></script>
-        <script src="js/dialogs/LevelClearedDialog.js"></script>
-        <script src="js/dialogs/TutorialDialog.js"></script>
-        <script src="js/dialogs/FactCreationDialog.js"></script>
-        <script src="js/dialogs/PauseMenuDialog.js"></script>
-        <script src="js/init.js"></script>
-	<script src="js/canvas.js"></script>
-        <script src="js/control.js"></script>
-        <script src="js/events.js"></script>
+        <link rel="import" href="dependencies.html">
     </head>
     <body class="menu-focused fill">
         <div id="GameContent" class="fill">
