Added Operator testing, and took init.js out of the dependencies since it is really more of a driver.

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -8,7 +8,8 @@
         <link rel="stylesheet" type="text/css" href="css/fact_creation.css" />
         <link rel="stylesheet" type="text/css" href="css/level_selection.css" />
         <link rel="stylesheet" type="text/css" href="css/blitzer/jquery-ui-1.10.4.custom.min.css" />
-        <link rel="import" href="dependencies.html">
+        <link rel="import" href="dependencies.html" />
+        <script src="js/init.js"></script>
     </head>
     <body class="menu-focused fill">
         <div id="GameContent" class="fill">
