--- a/ProoferLogicEngine/public_html/tests.html
+++ b/ProoferLogicEngine/public_html/tests.html
@@ -12,9 +12,10 @@
         <script src="js/libs/qunit-1.10.0/qunit-1.10.0.js"></script>
         
         <!-- Import JS files to test here -->
-        <link rel="import" href="dependencies.html">
+        <link rel="import" href="dependencies.html" />
         
         <!-- Add test files here -->
+        <script src="js/tests/Operator_tests.js"></script>
         <script src="js/tests/Fact_tests.js"></script>
     </body>
 </html>
