Added test file for Rules. Added test cases for MP and MT

--- a/ProoferLogicEngine/public_html/tests.html
+++ b/ProoferLogicEngine/public_html/tests.html
@@ -17,5 +17,6 @@
         <!-- Add test files here -->
         <script src="js/tests/Operator_tests.js"></script>
         <script src="js/tests/Fact_tests.js"></script>
+        <script src="js/tests/Rule_tests.js"></script>
     </body>
 </html>
