Added event and container html for new fact details popup.

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -83,6 +83,9 @@
                     <div id="Controls_Tooltip" style="display: none;">
 
                     </div>
+                    <div id="Controls_FactDetails" style="display: none;">
+
+                    </div>
                     <div id="Controls_AddTable" style="display: none;">
                         <table>
                             <tr>
