Added the rule of replacement toggle for clicked facts. Added HTML for the view but haven't done any styling though.

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -67,12 +67,15 @@
                         <button type="button" id="Controls_Executor_Save">Save</button>
                         <button type="button" id="Controls_Executor_Reset">Reset</button>
                     </div>
-                    <div id="Controls_Modifier" style="dislay: none;">
-                        <div id="Controls_Modifier_Error">
+                    <div id="Controls_Modifier" style="display: none;">
+			<div id="Controls_Modifier_Results"></div>
+			<button type="button" id="Controls_Modifier_Addit">Create</button>
+			<div id="Controls_Modifier_SelectionArea"></div>
+                        <!--<div id="Controls_Modifier_Error">
                             <div class="ui-state-error error-message" id="Controls_Modifier_Error_NoRules" style="display: none;">
-                                TODO enter description
+                                It looks like this problem doesn't let you use any Rules of Replacement!
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                     <div id="Controls_Executor" class="executor-modifier-active">
                         <div id="Controls_Executor_Result" class="executor-box boxed"></div>
