--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -70,7 +70,8 @@
                     <div id="Controls_Modifier" style="display: none;">
 			<div id="Controls_Modifier_Results"></div>
 			<button type="button" id="Controls_Modifier_Addit">Create</button>
-			<div id="Controls_Modifier_SelectionArea"></div>
+			<div id="Controls_Modifier_SelectionArea" class="boxed"></div>
+                        <div id="Controls_Modifier_Rule" class="executor-box boxed"></div>
                         <!--<div id="Controls_Modifier_Error">
                             <div class="ui-state-error error-message" id="Controls_Modifier_Error_NoRules" style="display: none;">
                                 It looks like this problem doesn't let you use any Rules of Replacement!
