Made function to get Fact from HTML string (was logic located in FactCreationDialog) and added unit tests for it, moved additional prototypes to function so tests could use it, started on rule of replacement calculating, though still no display

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -68,8 +68,9 @@
                         <button type="button" id="Controls_Executor_Reset">Reset</button>
                     </div>
                     <div id="Controls_Modifier" style="display: none;">
-			<div id="Controls_Modifier_Results"></div>
-			<button type="button" id="Controls_Modifier_Addit">Create</button>
+			<div id="Controls_Modifier_Results" class="boxed">
+			    <div id="Controls_Modifier_Results_Container" style="display: none;"></div>
+			</div>
 			<div id="Controls_Modifier_SelectionArea" class="boxed"></div>
                         <div id="Controls_Modifier_Rule" class="executor-box boxed"></div>
                         <!--<div id="Controls_Modifier_Error">
