--- a/ProoferLogicEngine/public_html/tests.html
+++ b/ProoferLogicEngine/public_html/tests.html
@@ -15,9 +15,15 @@
         <script src="js/tests/Operator_tests.js"></script>
         <script src="js/tests/Fact_tests.js"></script>
         <script src="js/tests/Rule_tests.js"></script>
+	
+	<!-- From init.js -->
+	<script>
+	    addPrototypes();
+	</script>
     </head>
     <body>
         <div id="qunit"></div>
         <div id="qunit-fixture"></div>
+	<div id="util" style="display: none;"></div>
     </body>
 </html>
