Implemented addding results from modifier

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -71,6 +71,7 @@
 			<div id="Controls_Modifier_Results" class="boxed">
 			    <div id="Controls_Modifier_Results_Container" style="display: none;"></div>
 			</div>
+			<input type="button" value="Add It" id="Controls_Modifier_AddIt" disabled="disabled"/>
 			<div id="Controls_Modifier_SelectionArea" class="boxed"></div>
                         <div id="Controls_Modifier_Rule" class="executor-box boxed"></div>
                         <!--<div id="Controls_Modifier_Error">
