Added tests for Levels, specifically Level.getHTML. More tests to follow.

--- a/ProoferLogicEngine/public_html/tests.html
+++ b/ProoferLogicEngine/public_html/tests.html
@@ -15,6 +15,7 @@
         <script src="js/tests/Operator_tests.js"></script>
         <script src="js/tests/Fact_tests.js"></script>
         <script src="js/tests/Rule_tests.js"></script>
+        <script src="js/tests/Level_tests.js"></script>
 	
 	<!-- From init.js -->
 	<script>
