--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -20,7 +20,7 @@
                 <ul id="MainMenuOptions" class="center">
                     <li><input type="button" value="Play Game" id="MenuPlayGame" class="menu-item" /></li>
                     <li><input type="button" value="Pick Level" id="MenuPickLevel" class="menu-item" /></li>
-		    <li><input type="button" value="Reset Progress" id="MenuReset" class="menu-item" /></li>
+                    <li><input type="button" value="Reset Progress" id="MenuReset" class="menu-item" /></li>
                     <li><input type="button" value="Exit" id="MenuExitGame" class="menu-item" /></li>
                 </ul>
             </div>
@@ -50,9 +50,9 @@
                 </div>
                 <div id="PickLevel_PageControls">
                     <button type="button" id="PickLevel_PageControls_Prev">Prev Page</button>
-		    <button type="button" id="PickLevel_PageControls_Next">Next Page</button>
+                    <button type="button" id="PickLevel_PageControls_Next">Next Page</button>
                     <button type="button" id="PickLevel_PageControls_Back">Back to Main Menu</button>
-		    <button type="button" id="PickLevel_PageControls_Play">Play Level</button>
+                    <button type="button" id="PickLevel_PageControls_Play">Play Level</button>
                 </div>
             </div>
             <div id="GameScreen" style="display: none;" class="fill">
@@ -68,11 +68,11 @@
                         <button type="button" id="Controls_Executor_Reset">Reset</button>
                     </div>
                     <div id="Controls_Modifier" style="display: none;">
-			<div id="Controls_Modifier_Results" class="boxed">
-			    <div id="Controls_Modifier_Results_Container" style="display: none;"></div>
-			</div>
-			<input type="button" value="Add It" id="Controls_Modifier_AddIt" disabled="disabled"/>
-			<div id="Controls_Modifier_SelectionArea" class="boxed"></div>
+                        <div id="Controls_Modifier_Results" class="boxed">
+                            <div id="Controls_Modifier_Results_Container" style="display: none;"></div>
+                        </div>
+                        <input type="button" value="Add It" id="Controls_Modifier_AddIt" disabled="disabled"/>
+                        <div id="Controls_Modifier_SelectionArea" class="boxed"></div>
                         <div id="Controls_Modifier_Rule" class="executor-box boxed"></div>
                         <!--<div id="Controls_Modifier_Error">
                             <div class="ui-state-error error-message" id="Controls_Modifier_Error_NoRules" style="display: none;">
@@ -104,7 +104,7 @@
                             </tr>
                             <tr id="Controls_AddTable_Fact1">
                                 <td>AT1</td>
-				<td colspan="2"></td>
+                                <td colspan="2"></td>
                             </tr>
                             <tr id="Controls_AddTable_Fact2">
                                 <td>AT2</td>
@@ -150,17 +150,17 @@
                 <div id="Dialogs_FactCreation" title="Fact Editor">
                     <div>
                         <h2>Instructions</h2>
-			<ul>
-			    <li>Use your keyboard to enter <span class="red">simple statements</span></li>
-			    <li>Press the Space bar add an additional <span class="green">operator</span> and <span class="red">simple statement</span> spot.</li>
-			    <li>Click a <span class="red">simple statement</span> or <span class="green">operator</span> to select it</li>
+                        <ul>
+                            <li>Use your keyboard to enter <span class="red">simple statements</span></li>
+                            <li>Press the Space bar add an additional <span class="green">operator</span> and <span class="red">simple statement</span> spot.</li>
+                            <li>Click a <span class="red">simple statement</span> or <span class="green">operator</span> to select it</li>
                             <li>Drag and drop <span class="green">operators</span></li>
                             <li>Form groups by dragging the <span class="gray">(&nbsp;) tool</span> over an <span class="green">operator</span>.</li>
                             <li>Select a <span class="red">simple statement</span> and press the <span class="gray">&tilde; button</span> to negate it.</li>
                             <li>To negate a group, select the group's <span class="green">operator</span> and then press the <span class="gray">&tilde; button</span>.</li>
                             <li>If you make a mistake, press the <span class="gray">Clear button</span>!</li>
-			</ul>
-			<h2>Creation Panel</h2>
+                        </ul>
+                        <h2>Creation Panel</h2>
                         <div id="Dialogs_FactCreation_Creation">
                         </div>
                         <div id="Dialogs_FactCreation_Error">
@@ -180,22 +180,24 @@
                             <li><div data="operator" class="operator"><span data="operator">&rarr;</span></div></li>
                             <li><div data="operator" class="operator"><span data="operator">&harr;</span></div></li>
                             <li><div data="operator" class="operator"><span data="operator">&oplus;</span></div></li>
-			    <li><div data="group" class="tool"><span data="group">(&nbsp;)</span></div></li>
-			    <li><div id="Dialogs_FactCreation_OpList_Negate"><span>&tilde;</span></div></li>
-			    <li><div id="Dialogs_FactCreation_OpList_Clear"><span>Clear</span></div></li>
+                            <li><div data="group" class="tool"><span data="group">(&nbsp;)</span></div></li>
+                            <li><div id="Dialogs_FactCreation_OpList_Negate"><span>&tilde;</span></div></li>
+                            <li><div id="Dialogs_FactCreation_OpList_Clear"><span>Clear</span></div></li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div id="PauseMenu" style="display: none;">
-                <h1>The game is PAUSED</h1>
-                <h3>Press ENTER to unpause.</h3>
-                <ul id="PauseMenu_Options">
-                    <li>Resume</li>
-                    <li>Options</li>
-                    <li>Main Menu</li>
-                    <li>Exit Game</li>
-                </ul>
+            <div id="PauseMenu" class="boxed" style="display: none;">
+                <div id="PauseMenu_Content">
+                    <h1>The game is PAUSED</h1>
+                    <h3>Press ENTER to unpause.</h3>
+                    <ul id="PauseMenu_Content_Options">
+                        <li>Resume</li>
+                        <li>Options</li>
+                        <li>Main Menu</li>
+                        <li>Exit Game</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </body>
