Changed wording for Pause menu

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -189,8 +189,8 @@
             </div>
             <div id="PauseMenu" class="boxed" style="display: none;">
                 <div id="PauseMenu_Content">
-                    <h1>The game is PAUSED</h1>
-                    <h3>Press ENTER to unpause.</h3>
+                    <h1>In-Game Menu</h1>
+                    <h3>Press ENTER to return.</h3>
                     <ul id="PauseMenu_Content_Options">
                         <li>Resume</li>
                         <li>Options</li>
