More updates to pausing and switched to use the svg. Pause overlay doesnt work quite how I imagined, but it's good enough for now.

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -12,6 +12,7 @@
         <script src="js/init.js"></script>
     </head>
     <body class="menu-focused fill">
+        <div id="FilterLayer" class="fill" style="display: none;"></div>
         <div id="GameContent" class="fill">
             <div id="MainMenu" class="fill">
                 <div id="OpeningGraphic">
