Huge change to require.js. Not done full regression test, but tested all except add table so expect some issues there. all unit tests pass.

--- a/ProoferLogicEngine/public_html/tests.html
+++ b/ProoferLogicEngine/public_html/tests.html
@@ -5,7 +5,7 @@
         <title>Proofer Tests</title>
         
         <!-- Load QUnit -->
-        <link rel="stylesheet" href="//code.jquery.com/qunit/qunit-1.14.0.css">
+        <link rel="stylesheet" type="text/css" href="css/qunit-1.10.0/qunit-1.10.0.css" />
         <script src="js/libs/qunit-1.10.0/qunit-1.10.0.js"></script>
         <script src="js/libs/require.js/require.js"></script>
         
